# base

./: README.md
algo/divide_and_conquer/: info.md  min_max.c  quick_sort_last.c  quicksort.md
algo/divide_and_conquer/merge_sort/: a  merge_sort.c  mergesort.md
datastructure/array/: introduction.md
docs/emacs/: 2_editing.md  3_search_and_replace.md  4_using_buffers_windows_and_frames.md
docs/git/: git.md  git.md~
docs/linuxc/: c.md
examples/linuxc/: c  choice.c  g.h
examples/linuxc/fvb/: buildconf  config.status  configure  configure.ac
examples/linuxc/fvb/scripts/: Makefile  Makefile.am  Makefile.in  script-fvb.sh
examples/linuxc/fvb/src/: Makefile.am  fvb.c  fvb_config.h.in
examples/linuxc/fvb/src/.deps/: main.Po
nce/: 0616_07_mutilated_ladies.md  0616_08_a_famous_monastery.md  0617_09_flying_cats.md  new_words.md
tools/: tools.sh
tools/emacs/: elpa-mirrors
tools/git/: gitconfig
tools/golang/: tools
tools/zsh/: base.sh  install.template  m1ns3c.zsh-theme
trush/nce/: 0622_L12_life_on_a_desert_island.md
trush/none/: 0623_01.md
