#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([fvb],[v0.0.1],[root@minsec.cn])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([src/fvb_config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile scripts/Makefile])
AC_OUTPUT
